--- a/styles/fonts.less
+++ b/styles/fonts.less
@@ -9,6 +9,7 @@
     src: url('../fonts/Poppins-Medium.ttf') format('truetype');
     font-weight: 500;
 }
+
 @font-face {
     font-family: 'Poppins';
     src: url('../fonts/Poppins-Regular.ttf') format('truetype');
@@ -37,42 +38,5 @@
 
 body {
     font-family: 'Poppins' !important;
-}
-
-.titulo {
-    font-size: 48px;
-    line-height: 58px;
-    color: #fafafa;
-    font-weight: 700;
-
-    span {
-        font-weight: 200;
-    }
-}
-
-.paragraph {
-    color: #fafafa;
-    font-size: 16px;
-    line-height: 26px;
-
-    .bg-frase {
-        padding: 1px 4px 0;
-        display: inline-block;
-    }
-
-    .bg-frase.verde {
-        background-color: #11d031;
-    }
-
-    .bg-frase.vermelho {
-        background-color: #e60b22;
-    }
-}
-
-.paragraph.regular {
-    font-weight: 400;
-}
-.paragraph.light 
-{
-    font-weight: 300;
+    color: #fff;
 }
