--- a/styles/main.css
+++ b/styles/main.css
@@ -32,39 +32,7 @@
 }
 body {
   font-family: 'Poppins' !important;
-}
-.titulo {
-  font-size: 48px;
-  line-height: 58px;
-  color: #fafafa;
-  font-weight: 700;
-}
-.titulo span {
-  font-weight: 200;
-}
-.paragraph {
-  color: #fafafa;
-  font-size: 16px;
-  line-height: 26px;
-}
-.paragraph .bg-frase {
-  padding: 1px 4px 0;
-  display: inline-block;
-}
-.paragraph .bg-frase.verde {
-  background-color: #11d031;
-}
-.paragraph .bg-frase.vermelho {
-  background-color: #e60b22;
-}
-.paragraph.regular {
-  font-weight: 400;
-}
-.paragraph.light {
-  font-weight: 300;
-}
-body {
-  background-color: #1b1c1c;
+  color: #fff;
 }
 a,
 button {
@@ -83,34 +51,120 @@ a:hover svg,
 button:hover svg {
   transition: 0.15s;
 }
+ol,
 ul {
   list-style: none !important;
   padding-left: 0 !important;
   margin-bottom: 0 !important;
 }
-body::-webkit-scrollbar {
-  width: 8px;
+.cep-mask,
+.cpf-mask,
+.cvv-mask,
+.phone-mask,
+.number-mask,
+.date-mask {
+  display: block;
 }
-body::-webkit-scrollbar-thumb {
-  background: red;
-  border-radius: 10px;
-}
-.container-luana {
-  max-width: 1340px;
+.button-action {
+  max-width: 220px;
   width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 5px;
+  /*    border-width: 2px;
+    border-style: solid;
+    border-color: #f7f7f7;
+    border-radius: 50px;*/
+  height: 36px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 15px;
+}
+.button-action .texto {
+  z-index: 1;
+  position: relative;
+  font-family: Poppins !important;
+}
+.button-action .texto span {
+  color: #f7f7f7;
+  text-transform: uppercase;
+  line-height: 16px;
+}
+.button-action .texto .aparecer {
+  display: none;
+}
+.button-action .ball {
+  z-index: 10;
+  position: absolute;
+  right: 8px;
+  -webkit-transition: 0.2s linear;
+  /*     .whatsapp {
+            display: none;
+            fill: #0000ef;
+        }
+
+        .seta {
+            display: block;
+            stroke: #f7f7f7;
+        }*/
+}
+.button-action .ball .settings-ball {
+  width: 36px;
+  height: 36px;
+  background-image: url('../images/whatsapp.png');
+  background-size: 30px 30px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  border-radius: 100%;
+}
+.button-action .ball .settings-ball .position-icon {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.button-action:hover .texto span {
+  color: #4caf50;
+}
+.button-action:hover .texto .desaparecer {
+  display: none !important;
+}
+.button-action:hover .texto .aparecer {
+  display: block;
+}
+.button-action:hover .ball {
+  transition: 0.2s linear;
+  right: 81%;
+}
+.button-action:hover .ball .settings-ball {
+  background-image: url('../images/whatsapp.png');
+}
+@keyframes piscar {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.tituloAnimado::after {
+  content: '';
+  position: relative;
+  border-right: 4px solid #fff;
+  animation: piscar 700ms linear infinite;
+}
+.title {
+  margin-bottom: 15px;
+  color: #fe7c00;
 }
 header {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   z-index: 3;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
-header .container-luana {
+header .container {
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -127,168 +181,142 @@ header ul li a {
   font-weight: 400;
 }
 header ul li a:hover {
-  color: yellow;
+  color: #fe7c00;
 }
 header ul li + li {
   margin-left: 30px;
 }
-#sobre {
-  padding: 150px 0 130px;
+#about {
+  padding-top: 80px;
 }
-#sobre .left-sobre {
+#about .image {
   max-width: 300px;
   width: 100%;
   height: 300px;
   margin-right: 30px;
 }
-#sobre .left-sobre img {
+#about .image .photo {
   width: 100%;
   height: inherit;
   object-fit: cover;
   object-position: center center;
   border-radius: 100%;
 }
-#sobre .container-luana {
+#about .container {
   display: flex;
   justify-content: center;
 }
-.bt-arrow {
-  display: inline-flex;
-  align-items: center;
-  font-size: 14px;
-  font-weight: 500;
-  letter-spacing: 1.4px;
-  text-transform: uppercase;
-  color: #11d031;
-}
-.bt-arrow svg {
-  margin-left: 22px;
-  fill: #11d031;
-}
-.titulo.gradient::after {
-  content: "";
-  background-image: linear-gradient(to right, #4eb2e1 0%, #e60b22 53%, #35b54a 100%);
-  height: 3px;
-  width: 100%;
-  display: block;
-  margin-top: 15px;
-  background-size: 300% 300%;
-  animation: gradient 11s ease infinite;
-}
-@keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
-}
-.experiencias-list .row-work {
+#about .bottom-footer {
   display: flex;
-  align-items: flex-start;
-  margin-bottom: 55px;
 }
-.experiencias-list .row-work .number {
-  border-bottom: 1px solid #ffffff;
-  width: 150px;
-  margin-right: 26px;
-  position: relative;
+#about .midias {
+  display: flex;
+  justify-content: flex-end;
 }
-.experiencias-list .row-work .number span {
-  color: #fafafa;
-  font-family: Poppins;
-  font-size: 22px;
-  font-weight: 700;
-  line-height: 26px;
+#about .midias a + a {
+  margin-left: 28px;
 }
-.experiencias-list .row-work .number::after {
-  content: "";
-  width: 1px;
-  height: 40px;
-  position: absolute;
-  bottom: -35px;
-  right: -13px;
-  transform: rotate(-42deg);
+#about .midias a {
+  border: 3px solid #fff;
+  display: block;
+  border-radius: 5px;
   background-color: #fff;
 }
-.experiencias-list .row-work .text {
-  width: calc(100% - 58px);
+#about .midias a:hover {
+  background-color: #fe7c00;
+  border: 3px solid #fe7c00;
 }
-.experiencias-list .row-work .text h2 {
-  color: #fafafa;
-  font-family: Poppins;
-  font-size: 22px;
-  font-weight: 400;
-  line-height: 26px;
-  text-align: right;
-  border-bottom: 1px solid #fff;
-  padding-top: 24px;
-  padding-bottom: 6px;
-  margin-bottom: 30px;
-}
-.experiencias-list .row-work .text p {
-  color: #fafafa;
-  font-family: Poppins;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 26px;
-  margin-bottom: 0;
-}
-#conhecimentos {
-  padding-bottom: 140px;
-}
-#conhecimentos h2 {
-  text-align: right;
-  margin-bottom: 90px;
-}
-#conhecimentos .box {
+#knowledges {
+  padding-top: 80px;
   text-align: center;
-  margin-bottom: 80px;
-  padding: 0 15px;
 }
-#conhecimentos .box .image {
-  height: 87px;
+#knowledges .box {
+  background-color: #eeeeee;
+  color: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: calc(50% - 10px);
+  margin-top: 20px;
+  border-radius: 10px;
+  min-height: 100px;
+}
+#knowledges .box h2 {
+  margin: 0;
+}
+#knowledges .box .logo {
+  margin-right: 10px;
+}
+#knowledges .content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+#experience {
+  padding-top: 80px;
+}
+#experience .acc {
+  margin-bottom: 15px;
+  background-color: #e6e6e6;
+  border-radius: 10px;
+  color: #000;
+}
+#experience .acc .click-area {
+  display: flex;
+  align-items: center;
+  background-color: #e6e6e6;
+  padding: 10px;
+  border-radius: 10px;
+}
+#experience .acc .click-area h4 {
+  margin: 0;
+}
+#experience .acc .click-area svg {
+  stroke: #fe7c00;
+  margin-right: 15px;
+}
+#experience .acc .content-experience {
+  background-color: #e6e6e6;
+  padding: 25px;
+  margin-top: 10px;
+  border-radius: 10px;
+}
+#portfolio {
+  padding-top: 80px;
+}
+#portfolio .box-site {
+  background-color: #e6e6e6;
+  border-radius: 10px;
+  max-width: 350px;
   width: 100%;
   display: flex;
-  align-items: flex-end;
-  justify-content: center;
-  margin-bottom: 48px;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px 10px 15px;
 }
-#conhecimentos .box .image svg {
-  max-height: 100%;
-  max-width: 100%;
-  fill: #fff;
-}
-#conhecimentos .box .text h3 {
-  color: #fafafa;
-  font-family: Poppins;
-  font-size: 22px;
-  font-weight: 700;
-  line-height: 26px;
-  margin-bottom: 20px;
-}
-#experiencia {
-  position: relative;
-  padding-bottom: 200px;
-}
-#experiencia .text {
+#portfolio .box-site .image {
+  max-width: 300px;
   width: 100%;
+  height: 170px;
 }
-#experiencia .text .titulo-processo {
-  margin-bottom: 100px;
+#portfolio .box-site .image img {
+  width: 100%;
+  height: inherit;
+  object-fit: contain;
+  overflow: hidden;
 }
-#experiencia .solucoes-list .row-solucao {
-  margin-bottom: 4px;
+#portfolio .box-site .text {
+  color: #000;
 }
-#experiencia .solucoes-list .row-solucao .text h2 {
-  text-align: center;
-  margin-bottom: 0;
+#portfolio .box-site:hover .image img {
+  transform: scale(1.1);
 }
-#experiencia .solucoes-list .row-solucao .text .bold {
-  font-weight: 700;
+#portfolio .box-site:hover .text {
+  color: #fe7c00;
+  font-size: 18px;
+}
+footer {
+  padding-top: 80px;
 }
 footer .voltar {
   display: flex;
@@ -310,26 +338,62 @@ footer .voltar a svg {
   fill: #fafafa;
 }
 footer .voltar a:hover {
-  color: greenyellow;
+  color: #fe7c00;
 }
 footer .voltar a:hover svg {
-  fill: greenyellow;
+  fill: #fe7c00;
 }
-footer .midias-footer {
+#card {
+  max-width: 100%;
+  perspective: 1000px;
+  margin: 15px;
+}
+#card,
+#flip-card {
+  position: relative;
+  width: 280px;
+  height: 230px;
+}
+#flip-card {
+  transition: transform 0.5s ease-in-out;
+  transform-origin: 50% 50%;
+  transform-style: preserve-3d;
+}
+#flip-card:Hover {
+  transform: rotateY(180deg);
+}
+#flip-card-front,
+#flip-card-back {
+  position: absolute;
+  top: 0;
+  left: 0;
   display: flex;
-  justify-content: flex-end;
-  margin-bottom: 47px;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
-footer .midias-footer a + a {
-  margin-left: 28px;
+#flip-card-front,
+#flip-card-back {
+  border-radius: 10px;
+  backface-visibility: hidden;
+  font-family: Verdana;
+  font-size: 1em;
 }
-footer .midias-footer a {
-  border: 3px solid #fff;
-  display: block;
-  border-radius: 5px;
-  background-color: #fff;
+#flip-card-back {
+  box-shadow: 0 0 5px #e6e6e6;
+  background-color: #e6e6e6;
+  transform: rotateY(180deg);
+  color: #222;
 }
-footer .midias-footer a:hover {
-  background-color: blue;
-  border: 3px solid blue;
+#flip-card-front {
+  box-shadow: 0 0 5px #161616;
+  background-color: #e6e6e6;
+  color: #000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#flip-card-front .logo {
+  margin-bottom: 8px;
 }
