--- a/styles/fonts.less
+++ b/styles/fonts.less
@@ -1,42 +1,66 @@
 ﻿@font-face {
-    font-family: 'Poppins';
-    src: url('../fonts/Poppins-Bold.ttf') format('truetype');
+    font-family: 'OpenSans';
+    src: url('../fonts/OpenSans-ExtraBold.ttf') format('truetype');
+    font-weight: 800;
+}
+
+@font-face {
+    font-family: 'OpenSans';
+    src: url('../fonts/OpenSans-ExtraBoldItalic.ttf') format('truetype');
+    font-weight: 800;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'OpenSans-Bold';
+    src: url('../fonts/OpenSans-Bold.ttf') format('truetype');
     font-weight: 700;
 }
 
 @font-face {
-    font-family: 'Poppins';
-    src: url('../fonts/Poppins-Medium.ttf') format('truetype');
-    font-weight: 500;
-}
-
-@font-face {
-    font-family: 'Poppins';
-    src: url('../fonts/Poppins-Regular.ttf') format('truetype');
-    font-weight: 400;
-}
-
-@font-face {
-    font-family: 'Poppins';
-    src: url('../fonts/Poppins-Italic.ttf') format('truetype');
-    font-weight: 400;
+    font-family: 'OpenSans-BoldItalic';
+    src: url('../fonts/OpenSans-BoldItalic.ttf') format('truetype');
+    font-weight: 700;
     font-style: italic;
 }
 
 @font-face {
-    font-family: 'Poppins';
-    src: url('../fonts/Poppins-LightItalic.ttf') format('truetype');
+    font-family: 'OpenSans';
+    src: url('../fonts/OpenSans-SemiBold.ttf') format('truetype');
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: 'OpenSans';
+    src: url('../fonts/OpenSans-SemiBoldItalic.ttf') format('truetype');
+    font-weight: 600;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'OpenSans';
+    src: url('../fonts/OpenSans-Regular.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'OpenSans';
+    src: url('../fonts/OpenSans-Italic.ttf') format('truetype');
+    font-style: italic;
+}
+@font-face {
+    font-family: 'OpenSans';
+    src: url('../fonts/OpenSans-Light.ttf') format('truetype');
+    font-weight: 300;
+}
+@font-face {
+    font-family: 'OpenSans';
+    src: url('../fonts/OpenSans-LightItalic.ttf') format('truetype');
     font-weight: 300;
     font-style: italic;
 }
 
-@font-face {
-    font-family: 'Poppins';
-    src: url('../fonts/Poppins-ExtraLight.ttf') format('truetype');
-    font-weight: 200;
-}
+
 
 body {
-    font-family: 'Poppins' !important;
-    color: #fff;
+    font-family: 'OpenSans' !important;
 }
