--- a/styles/main.css
+++ b/styles/main.css
@@ -1,38 +1,58 @@
 ﻿@font-face {
-  font-family: 'Poppins';
-  src: url('../fonts/Poppins-Bold.ttf') format('truetype');
+  font-family: 'OpenSans';
+  src: url('../fonts/OpenSans-ExtraBold.ttf') format('truetype');
+  font-weight: 800;
+}
+@font-face {
+  font-family: 'OpenSans';
+  src: url('../fonts/OpenSans-ExtraBoldItalic.ttf') format('truetype');
+  font-weight: 800;
+  font-style: italic;
+}
+@font-face {
+  font-family: 'OpenSans-Bold';
+  src: url('../fonts/OpenSans-Bold.ttf') format('truetype');
   font-weight: 700;
 }
 @font-face {
-  font-family: 'Poppins';
-  src: url('../fonts/Poppins-Medium.ttf') format('truetype');
-  font-weight: 500;
-}
-@font-face {
-  font-family: 'Poppins';
-  src: url('../fonts/Poppins-Regular.ttf') format('truetype');
-  font-weight: 400;
-}
-@font-face {
-  font-family: 'Poppins';
-  src: url('../fonts/Poppins-Italic.ttf') format('truetype');
-  font-weight: 400;
+  font-family: 'OpenSans-BoldItalic';
+  src: url('../fonts/OpenSans-BoldItalic.ttf') format('truetype');
+  font-weight: 700;
   font-style: italic;
 }
 @font-face {
-  font-family: 'Poppins';
-  src: url('../fonts/Poppins-LightItalic.ttf') format('truetype');
+  font-family: 'OpenSans';
+  src: url('../fonts/OpenSans-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+}
+@font-face {
+  font-family: 'OpenSans';
+  src: url('../fonts/OpenSans-SemiBoldItalic.ttf') format('truetype');
+  font-weight: 600;
+  font-style: italic;
+}
+@font-face {
+  font-family: 'OpenSans';
+  src: url('../fonts/OpenSans-Regular.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'OpenSans';
+  src: url('../fonts/OpenSans-Italic.ttf') format('truetype');
+  font-style: italic;
+}
+@font-face {
+  font-family: 'OpenSans';
+  src: url('../fonts/OpenSans-Light.ttf') format('truetype');
+  font-weight: 300;
+}
+@font-face {
+  font-family: 'OpenSans';
+  src: url('../fonts/OpenSans-LightItalic.ttf') format('truetype');
   font-weight: 300;
   font-style: italic;
 }
-@font-face {
-  font-family: 'Poppins';
-  src: url('../fonts/Poppins-ExtraLight.ttf') format('truetype');
-  font-weight: 200;
-}
 body {
-  font-family: 'Poppins' !important;
-  color: #fff;
+  font-family: 'OpenSans' !important;
 }
 a,
 button {
@@ -65,119 +85,188 @@ ul {
 .date-mask {
   display: block;
 }
-.button-action {
-  max-width: 220px;
+/* GERAIS */
+body {
+  background-color: #212121;
+  font-family: 'OpenSans' !important;
+}
+.main-container {
+  max-width: 1120px;
   width: 100%;
-  padding: 5px;
-  /*    border-width: 2px;
-    border-style: solid;
-    border-color: #f7f7f7;
-    border-radius: 50px;*/
-  height: 36px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.titulo-section {
+  margin-bottom: 32px;
+}
+.titulo-section h2 {
+  font-weight: 600;
+  font-size: 24px;
+  color: #FAFAFA;
+  font-family: OpenSans;
+  display: inline;
   position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 15px;
 }
-.button-action .texto {
-  z-index: 1;
-  position: relative;
-  font-family: Poppins !important;
-}
-.button-action .texto span {
-  color: #f7f7f7;
-  text-transform: uppercase;
-  line-height: 16px;
-}
-.button-action .texto .aparecer {
-  display: none;
-}
-.button-action .ball {
-  z-index: 10;
-  position: absolute;
-  right: 8px;
-  -webkit-transition: 0.2s linear;
-}
-.button-action .ball .settings-ball {
-  width: 36px;
-  height: 36px;
-  background-size: 30px 30px;
-  background-repeat: no-repeat;
-  background-position: center center;
-  border-radius: 100%;
-}
-.button-action .ball .settings-ball svg {
-  fill: #fff;
-}
-.button-action .ball .settings-ball .position-icon {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.button-action:hover .texto span {
-  color: #4caf50;
-}
-.button-action:hover .texto .desaparecer {
-  display: none !important;
-}
-.button-action:hover .texto .aparecer {
-  display: block;
-}
-.button-action:hover .ball {
-  transition: 0.2s linear;
-  right: 81%;
-}
-.button-action:hover .ball .settings-ball svg {
-  fill: green;
-}
-@keyframes piscar {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-.tituloAnimado::after {
+.titulo-section h2:after {
   content: '';
-  position: relative;
-  border-right: 4px solid #fff;
-  animation: piscar 700ms linear infinite;
-}
-.title {
-  margin-bottom: 15px;
-  color: #fe7c00;
+  width: 100%;
+  height: 4px;
+  background: linear-gradient(90deg, #ff9800 26%, #424242 26%);
+  position: absolute;
+  bottom: -5px;
+  right: 0;
 }
 header {
-  width: 100%;
-  z-index: 3;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 52px;
 }
-header .container {
+header .main-container {
   display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  padding-top: 15px;
+  justify-content: space-between;
 }
-header ul li {
-  display: inline-block;
+header .nome a {
+  color: #FF9800;
+  font-weight: 700;
 }
-header ul li a {
-  display: inline-block;
-  color: #fafafa;
-  font-family: Poppins;
+header .menu ul {
+  display: flex;
+}
+header .menu ul li + li {
+  margin-left: 32px;
+}
+header .menu ul a {
+  font-size: 16px;
+  color: #FAFAFA;
+}
+header .menu ul a:hover {
+  color: #FF9800;
+}
+#sobre {
+  padding-top: 60px;
+}
+#sobre p {
   font-size: 16px;
   font-weight: 400;
+  color: #FAFAFA;
+  margin: 0;
 }
-header ul li a:hover {
-  color: #fe7c00;
+#sobre h1 {
+  color: #FF9800;
+  font-size: 48px;
+  font-weight: 300;
+  margin-bottom: 20px;
 }
-header ul li + li {
-  margin-left: 30px;
+#sobre h1 span {
+  font-weight: 700;
+}
+#sobre .main-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#sobre .image {
+  max-width: 357px;
+  width: 100%;
+  height: 357px;
+}
+#sobre .image img {
+  width: 100%;
+  height: inherit;
+  border-radius: 100%;
+}
+#sobre .infos {
+  max-width: 548px;
+  width: 100%;
+  margin-left: 24px;
+}
+#sobre .links {
+  margin-top: 31px;
+}
+#sobre .links a + a {
+  margin-left: 29px;
+}
+#sobre .links a svg {
+  fill: #FF9800;
+}
+#sobre .links a:hover svg {
+  fill: #FFB74D;
+}
+#conhecimentos {
+  padding-top: 80px;
+}
+#conhecimentos .content-conhecimentos {
+  display: flex;
+}
+#conhecimentos .content-conhecimentos .mobile {
+  display: flex;
+}
+#conhecimentos .content-conhecimentos .mobile #card + #card {
+  margin-left: 24px;
+}
+#conhecimentos .content-conhecimentos .mobile + .mobile {
+  margin-left: 24px;
+}
+.section-flex {
+  padding-top: 60px;
+}
+.section-flex .main-container {
+  display: flex;
+  justify-content: space-between;
+}
+.section-flex #idiomas {
+  width: 50%;
+}
+.section-flex #idiomas .content-idiomas {
+  display: flex;
+}
+.section-flex #idiomas .content-idiomas .info-idioma + .info-idioma {
+  margin-left: 40px;
+}
+.section-flex #idiomas .info-idioma {
+  display: flex;
+}
+.section-flex #idiomas .info-idioma p {
+  color: #FAFAFA;
+  margin: 0;
+}
+.section-flex #idiomas .info-idioma .idioma {
+  font-weight: 600;
+  margin-bottom: 4px;
+}
+.section-flex #idiomas .info-idioma .nivel {
+  font-weight: 300;
+}
+.section-flex #idiomas .info-idioma .icon {
+  margin-right: 19px;
+}
+.section-flex #hobbies {
+  width: 50%;
+}
+#experiencia {
+  padding-top: 60px;
+}
+#experiencia .acc {
+  background: #424242;
+  border: 2px solid #FF9800;
+  box-sizing: border-box;
+  border-radius: 16px;
+  padding: 24px;
+  width: 100%;
+}
+#experiencia .acc h4 {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  color: #FAFAFA;
+}
+#experiencia .acc h4 span {
+  font-weight: 400;
+}
+#experiencia .acc p {
+  font-size: 16px;
+  font-weight: 400;
+  color: #FAFAFA;
 }
 #about {
   padding-top: 80px;
@@ -219,61 +308,72 @@ header ul li + li {
 #about .midias a:hover svg {
   fill: #fe7c00;
 }
-#knowledges {
-  padding-top: 80px;
-  text-align: center;
-}
-#knowledges .box {
-  background-color: #eeeeee;
-  color: #000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: calc(50% - 10px);
-  margin-top: 20px;
-  border-radius: 10px;
-  min-height: 100px;
-}
-#knowledges .box h2 {
-  margin: 0;
-}
-#knowledges .box .logo {
-  margin-right: 10px;
-}
-#knowledges .content {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-#experience {
-  padding-top: 80px;
-}
-#experience .acc {
-  margin-bottom: 15px;
-  background-color: #e6e6e6;
-  border-radius: 10px;
-  color: #000;
-}
-#experience .acc .click-area {
-  display: flex;
-  align-items: center;
-  background-color: #e6e6e6;
-  padding: 10px;
-  border-radius: 10px;
-}
-#experience .acc .click-area h4 {
-  margin: 0;
-}
-#experience .acc .click-area svg {
-  stroke: #fe7c00;
-  margin-right: 15px;
-}
-#experience .acc .content-experience {
-  background-color: #e6e6e6;
-  padding: 25px;
-  margin-top: 10px;
-  border-radius: 10px;
-}
+/*#knowledges {
+    padding-top: 80px;
+
+    .box {
+        background-color: #eeeeee;
+        color: #000;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: calc(50% - 10px);
+        margin-top: 20px;
+        border-radius: 10px;
+        min-height: 100px;
+
+        h2 {
+            margin: 0;
+        }
+
+        .logo {
+            margin-right: 10px;
+        }
+    }
+
+    text-align: center;
+
+    .content {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+}*/
+/*#experience {
+    padding-top: 80px;
+
+    .acc {
+        margin-bottom: 15px;
+        background-color: rgb(230,230,230);
+        border-radius: 10px;
+        color: #000;
+
+        .click-area {
+            display: flex;
+            align-items: center;
+            background-color: rgb(230,230,230);
+            padding: 10px;
+            border-radius: 10px;
+
+
+            h4 {
+                margin: 0;
+            }
+
+            svg {
+                stroke: #fe7c00;
+                margin-right: 15px;
+            }
+        }
+
+        .content-experience {
+            background-color: rgb(230,230,230);
+            padding: 25px;
+            margin-top: 10px;
+            border-radius: 10px;
+        }
+    }
+}*/
 #portfolio {
   padding-top: 80px;
 }
@@ -339,13 +439,13 @@ footer .voltar a:hover svg {
 #card {
   max-width: 100%;
   perspective: 1000px;
-  margin: 15px;
+  /*    margin: 15px;*/
 }
 #card,
 #flip-card {
   position: relative;
-  width: 280px;
-  height: 230px;
+  width: 167px;
+  height: 112px;
 }
 #flip-card {
   transition: transform 0.5s ease-in-out;
@@ -368,25 +468,27 @@ footer .voltar a:hover svg {
 }
 #flip-card-front,
 #flip-card-back {
-  border-radius: 10px;
+  border-radius: 16px;
   backface-visibility: hidden;
   font-family: Verdana;
   font-size: 1em;
 }
 #flip-card-back {
-  box-shadow: 0 0 5px #e6e6e6;
-  background-color: #e6e6e6;
+  /*    box-shadow: 0 0 5px rgb(230,230,230);*/
+  background-color: #424242;
   transform: rotateY(180deg);
-  color: #222;
+  color: #FAFAFA;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  border: 2px solid #FF9800;
 }
 #flip-card-front {
-  box-shadow: 0 0 5px #161616;
-  background-color: #e6e6e6;
+  /*    box-shadow: 0 0 5px rgb(22,22,22);*/
+  background-color: #424242;
   color: #000;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-#flip-card-front .logo {
-  margin-bottom: 8px;
+  border: 2px solid #FF9800;
 }
