--- a/styles/responsive/1024.less
+++ b/styles/responsive/1024.less
@@ -16,7 +16,7 @@ header {
 
 
     h1 {
-        font-size: 38px;
+        font-size: 32px;
 
         span {
             font-weight: 700;
@@ -26,6 +26,8 @@ header {
     .infos {
         text-align: center;
         margin-top: 20px;
+        margin-left: 0;
+
 
         .texto {
             text-align: justify;
